# rmvpe-onnx

./: .gitignore  README.md  pyproject.toml
docs/: attribution.md
examples/: basic.py  basic_onnx.py  basic_torch.py
export/: pyproject.toml
export/src/rmvpe_export/: __init__.py  export.py
export/src/rmvpe_export/model/: inference.py  model.py
export_onnx/: pyproject.toml
export_onnx/src/rmvpe_export_onnx/: export.py
src/rmvpe_lite/: __init__.py  onnx.py  torch.py
src/rmvpe_lite/model/: __init__.py  deepunet.py
src/rmvpe_onnx/: __init__.py  model.py
