[project]
name = "rmvpe-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[project.optional-dependencies]
onnx = [
    "librosa>=0.11.0",
    "onnxruntime>=1.27.0",
    "soundfile>=0.14.0",
]
torch = [
    "librosa>=0.11.0",
    "safetensors>=0.8.0",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
