[project]
name = "rmvpe-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.22.0",
    "librosa>=0.11.0",
    "onnx>=1.22.0",
    "onnxscript>=0.7.1",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
]

[project.scripts]
rmvpe-export = "rmvpe_export:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
